Quorum3/Library/Tests/TypeChecker/Pass/ExpAssignTextIntObj.quorum
Integer int
int:SetValue(5)
text t = cast(text, int)
output t