Quorum3/Library/Tests/TypeChecker/Fail/ImpAssignTextIntObjWrapped.quorum
class main
    action main
        Integer int
        int:setValue(5)
        text t = int
    end
end